--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,6 +20,9 @@
 
 // Import partials
 @import "nav";
+@import "jumbotron";
+// Import Bootstrap styles:
+@import "../../node_modules/bootstrap/scss/bootstrap";
 
 h3 {
   font-size: 1.5rem;
