--- a/src/scss/_jumbotron.scss
+++ b/src/scss/_jumbotron.scss
@@ -1,7 +1,7 @@
 #jumbo {
   background: url(../img/cmc-austin-sunrise-20200614.jpg) no-repeat center;
   background-size: cover;
-  color: white;
+  color: rgb(238, 198, 20);
   padding-top: 12rem
 }
 
