--- a/src/njk/_includes/jumbotron.njk
+++ b/src/njk/_includes/jumbotron.njk
@@ -1,6 +1,6 @@
 <div id="jumbo" class="p-5 mb-4 bg-light">
   <div class="container-fluid py-5 text-center">
-    <h1 class="display-5 fw-bold">Austin Tourism</h1>
+    <h1 class="display-5 fw-bold" style= "color: rgb(209, 173, 12)">Austin Tourism</h1>
     <p>Discover what keeps Austin weird </p>
   </div>
 </div>
