--- a/src/njk/_templates/bake-blog.njk
+++ b/src/njk/_templates/bake-blog.njk
@@ -1,25 +1,21 @@
+
+   
 {% extends '_templates/base.njk' %}
 {% set relative_path = "../" %}
 {% from '_macros/prose.njk' import prose %}
 
 {% block page_title %}{{ headline }}{% endblock %}
 
-{% block page_description %}{{ headline }} by Capt. Crit McGillicutty{% endblock %}
+{% block page_description %}{{ headline }} Default Title{% endblock %}
 
 {% block content %}
-  <article class="container">
-    <div class="row">
-      <div class="col-sm-4">
-        <img src="../img/pirate.jpg" alt="pirate character" class="img-fluid">
-        <p class="byline">By Crit McGillicutty<br>
-        <span>Island Breeze Tribune</span></p>
-        <hr class="d-sm-none">
-      </div>
-      <div class="col-sm-8">
-        <img src="../img/{{ image }}" alt="landmark" class="img-fluid mb-4">
+      <article class= "container">
+        <div class="row">
+          <div class="col-sm-8 offset-2">
+          <img src="../{{ image }}" class="img-fluid mb-4" alt="">
         <h1>{{ headline }}</h1>
         {{ prose(post) }}
       </div>
     </div>
-  </article>
+   <artcile> 
 {% endblock %}
