--- a/src/njk/index-example.njk
+++ b/src/njk/index-example.njk
@@ -5,17 +5,19 @@
 {% block page_description %}The index search description for this page goes here.{% endblock %}
 
 {% block content %}
-
-    <div class="row">
+  <div class="article">
        <div class="col-md-8 offset-2">
        {% for blog in blog.blogs %}
         <div>
-        <img src="img/{{blog.image}} " class="card-img-top" alt="...">
-        <h6> {{ blog.date }} <h6>
+          <brk>
         <h3> <a href="blog/{{ blog.slug }}.html">{{ blog.headline }}</a></h3>
-        {% endfor %}
+         <h6> {{ blog.date }} <h6>
+         <img src="img/landmarks/{{blog.image}} " class="card-img-top" alt="...">
+          <brk>
+          <brk>
+      {% endfor %}
       <div>
-    <div>
+  <div>
 
 
 
