--- a/src/njk/index.njk
+++ b/src/njk/index.njk
@@ -5,8 +5,8 @@
 {% block content %}
 <div class="container">
   <div class= "row">
-    <div class= "col">
- <h1>Why Austin?</h1>
+    <div class= "col-md-10 offset-1">
+ <h1> Why Austin?</h1>
   <p>What you hear is true. With vibrant entertainment, art and culture, inspiring cuisine and stunning outdoor experiences, Austin lets you create a soundtrack all your own. So take a look around, and put the Live Music Capital of the World® on your playlist.</p>
 </div>
 
@@ -20,28 +20,16 @@
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
     <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="img/lady-bird-lake.jpg" class="d-block w-1200" alt="...">
+     {% for blog in blog.blogs %}
+      <div class="carousel-item {% if loop.first %} active {% endif %}">
+        <img src="img/landmarks/{{blog.image}}" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>What's that Kraken?</h5>
-          <p>Some representative placeholder content for the first slide.</p>
+          <h5>{{ blog.headline }}</h5>
         </div>
       </div>
-      <div class="carousel-item">
-        <img src="img/mount-bonnell.jpg" class="d-block w-1200" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Some representative placeholder content for the second slide.</p>
-        </div>
+ {% endfor %} 
+
       </div>
-      <div class="carousel-item">
-        <img src="img/texas-state-capitol;.jpg" class="d-block w-1200" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
-        </div>
-      </div>
-    </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
@@ -51,10 +39,7 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
-
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    
+         <brk>
     <div class="row">
        <div class="col-md-8 offset-2">
        {% for blog in blog.blogs %}
