--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -27,3 +27,20 @@
 h3 {
   font-size: 1.5rem;
 }
+
+$primary:#e9b936;
+$body-bg: #ededed;
+
+article {
+  margin-bottom: 1em;
+  margin-top: 1em;
+}
+
+h6 {
+  margin-top: 1em;
+
+}
+
+h1 {
+  font: rgb(209, 173, 12);
+}
