looking pretty good

--- a/src/njk/_templates/bake-blog.njk
+++ b/src/njk/_templates/bake-blog.njk
@@ -12,7 +12,7 @@
       <article class= "container">
         <div class="row">
           <div class="col-sm-8 offset-2">
-          <img src="../{{ image }}" class="img-fluid mb-4" alt="">
+          <img src="../img/landmarks/{{ image }}" class="img-fluid mb-4" alt="">
         <h1>{{ headline }}</h1>
         {{ prose(post) }}
       </div>
