--- a/src/njk/restaurants.njk
+++ b/src/njk/restaurants.njk
@@ -7,9 +7,9 @@
 
  <div class="row">
   {% for rest in restaurants.restaurants %}
-  <div class="col-sm-6 bg-warning">
-    <div class="card">
-      <img src="img/restaurants/{{rest.image}} " class="img-fluid" alt="...">
+  <div class="col-sm-6 bg-warning mg 2">
+    <div class="card h-100">
+      <img src="img/restaurants/{{rest.image}} " class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"> {{ rest.name }} </h5>
         <p class="card-text"> {{ rest.category}} </p>
