--- a/src/njk/_includes/jumbotron.njk
+++ b/src/njk/_includes/jumbotron.njk
@@ -1,6 +1,7 @@
-<div id="jumbo" class="p-5 mb-4 bg-light">
+<div id="jumbo" class="p-5 mb-4 bg-war">
   <div class="container-fluid py-5 text-center">
-    <h1 class="display-5 fw-bold" style= "color: rgb(209, 173, 12)">Austin Tourism</h1>
+    <h1 class="display-5 fw-bold" style= "color: rgb(209, 173, 12)" <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital@1&display=swap" rel="stylesheet">
+Austin Tourism</h1>
     <p>Discover what keeps Austin weird </p>
   </div>
 </div>
