--- a/src/njk/index.njk
+++ b/src/njk/index.njk
@@ -10,9 +10,11 @@
   <p>What you hear is true. With vibrant entertainment, art and culture, inspiring cuisine and stunning outdoor experiences, Austin lets you create a soundtrack all your own. So take a look around, and put the Live Music Capital of the World® on your playlist.</p>
 </div>
 
+
+
 <!--I have no idea what's wrong with this carousel, I've figured out that the images are sized width: 1200px; height:800px. At first I made a carousel njk but then was like why can't i just put the code directly in the index bc it will only be on the index.. -->
 <brk>
-<div class="container w-1200" >
+<div class="container w-1200" class="padding:30px" >
   <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -22,14 +24,18 @@
     <div class="carousel-inner">
      {% for blog in blog.blogs %}
       <div class="carousel-item {% if loop.first %} active {% endif %}">
+       <a href="blog/{{ blog.slug }}.html">
         <img src="img/landmarks/{{blog.image}}" class="d-block w-100" alt="...">
+      </a>
         <div class="carousel-caption d-none d-md-block">
           <h5>{{ blog.headline }}</h5>
         </div>
       </div>
+      
+      
  {% endfor %} 
 
-      </div>
+  
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
@@ -38,9 +44,15 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
-  </div>
+   </div>
+   
+   
+   
+
+  
+  
        
-    <div class="row">
+   <!-- <div class="row">
        <div class="col-md-8 offset-2">
        {% for blog in blog.blogs %}
         <div>
@@ -49,8 +61,42 @@
         {% endfor %}
       <div>
     <div>
+-->
 
+<div class ="container" class="padding:25x">
+    <h2 class="row row-cols-1 row-cols-md-3 g-1  my-4"> Secrets from a girl that worked at them all. </h2>
+    <div class="row row-cols-1 row-cols-md-3 g-1  my-4">
+    <div class="col">
+      <div class="card h-100">
+        <img src="img/restaurants/coffeeandcrisp.jpg" class="card-img-top" alt="job">
+        <div class="card-body">
+          <h5 class="card-title">Coffee + Crisp</h5>
+          <p class="card-text">This cute coffeeshop found in the domain offers specialty house-made syrups and homemade "crisps"-- crispy treats with a twist. Best drink hands down is the "Tati"-- a vanilla, almond, cinnamon drink named after the beloved barista Tati. Coffee + Crisp have the best baristas, they absolutely love getting treats on holidays from customers, so "cough cough-- reese's peanut butter cups are a favorite."</p>
+           <a href="https://www.yelp.com/biz/coffee-crisp-cafe-austin" target="_blank" class="btn btn-primary">Yelp Review</a>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="img/restaurants/dolce-neve.jpg" class="card-img-top" alt="job">
+        <div class="card-body">
+          <h5 class="card-title">Dolce Neve Gelato</h5>
+          <p class="card-text">Gelato made by-- you guessed it-- actual Italians! Francesca, Leo, and Marco moved to Austin in 2012 and brought with them tasty secrets from the renowned Carpigiani Gelato University. From one gelato lover to another-- go bold and try their chocolate chip and sunflower seed gelato. </p>
+          <a href="https://www.yelp.com/biz/dolce-neve-austin" target="_blank" class="btn btn-primary">Yelp Review</a>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="img/restaurants/red-river.jpg" class="card-img-top" alt="job">
+        <div class="card-body">
+          <h5 class="card-title">Red River Cafe</h5>
+          <p class="card-text">This special diner has been around for 40 years! Beloved cook, Charlie, has been there in the back since the very beginning. Catch him there on Sundays and Saturdays. One secret from a waitress that's cried in the walk-in fridge-- is that even though the menu says that there's mimosas-- Red River actually doesn't serve them. Come here for everything but girl's sunday brunch. Fun fact: This diner can be seen in one "Fear of the Walking Dead" episode. </p>
+          <a href="https://www.yelp.com/biz/red-river-cafe-austin" target="_blank" class="btn btn-primary">Yelp Review</a>
+        </div>
+      </div>
+    </div>
+  </div>
 
 {% endblock %}
-
 
